Logo UMS (PLATIM), ERC agreement en petit en bas

--- a/poster_Okinawa.tex
+++ b/poster_Okinawa.tex
@@ -131,7 +131,12 @@ Wrinkling of a confined porous layer
 \LHead{Mathieu Leocmach, Mathieu Nespoulous, Thomas Gibaud, Sébastien Manneville
 }\hfill\texttt{\color{Accent1}mathieu.leocmach@ens-lyon.fr}\\
 
-\LHead{\textsc{Laboratoire de Physique, Ecole Normale Supérieure de Lyon}\hfill\raisebox{-1.5\baselineskip}{\includegraphics[height=2\baselineskip,clip=true, trim=0 10mm 0 0]{NEW-Logo-ERC-OUTLINE}\qquad\includegraphics[height=2\baselineskip]{CNRSfilaire-Q}\qquad\includegraphics[height=2\baselineskip]{logo_ens-lyon}}}
+\LHead{\textsc{Laboratoire de Physique, Ecole Normale Supérieure de Lyon}\hfill\raisebox{-1.5\baselineskip}{
+	\includegraphics[height=2\baselineskip,clip=true, trim=6mm 14mm 6mm 0]{NEW-Logo-ERC-OUTLINE}\quad
+	\includegraphics[height=2\baselineskip]{logo_ums_grand}\quad
+	\includegraphics[height=2\baselineskip]{CNRSfilaire-Q}\quad
+	\includegraphics[height=2\baselineskip]{logo_ens-lyon}
+}}
 
 \end{textblock}
 
@@ -305,231 +310,10 @@ Wrinkling of a confined porous layer
 
 
 
-\begin{textblock}{4}(0,16)
-	\Head{Composition}
-	\Subhead{Less gdl}
-	\begin{itemize}
-		\item slower kinetics
-		\item stronger gel
-		\item weaker overshoot
-		\item same fundamental \linebreak wavelength
-		\item less harmonics
-	\end{itemize}
-	\Subhead{More gdl}
-	\begin{itemize}
-		\item plasticity
-	\end{itemize}
-\end{textblock}
-\begin{textblock}{2}(2,16)
-	\addvspace{2.4em}
-	bottom surface, \textsc{gdl} 5\%\\
-	\begin{tikzpicture}[inner sep=0]
-		\draw[ultra thick] (0,0) -- ++(1.11\TPHorizModule,0) node[pos=0.5, above=0, font=\small] {\SI{500}{\micro\metre}};
-	\end{tikzpicture}
-	
-	\includegraphics[width=2\TPHorizModule]{plastic_confocal}
-\end{textblock}
 
-\begin{textblock}{4}(0,20)
-	\Head{Thickness}
-	\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}ccb{0.45\textwidth}}
-	\SI{50}{\micro\metre} & \SI{100}{\micro\metre}&
-	\multirow{4}{*}{\begin{tikzpicture}
-	\node[inner sep=0] (a) {\includegraphics[width=0.45\textwidth]{pattern_800um_x1.jpg}};
-	\node[above=0 of a] {\SI{800}{\micro\metre}};
-	\draw[ultra thick](a.north west) ++(0,2em) -- ++(0.2\textwidth,0) node[midway, above, inner sep=0] {\SI{5}{\milli\metre}};
-	\draw[ultra thick, Accent2, <->] (a.south west) ++(0.18\textwidth, 0.05\textwidth) -- ++(0.133\textwidth,0) node[midway,above]{$\lambda$};
-	\end{tikzpicture}}\\
-	
-	\includegraphics[width=0.225\textwidth]{pattern_50um.jpg} & \includegraphics[width=0.225\textwidth]{pattern_100um.jpg}&
-	\\
-	
-	\SI{250}{\micro\metre} & \SI{450}{\micro\metre} &\\
-	
-	\includegraphics[width=0.225\textwidth]{pattern_250um.jpg} & \includegraphics[width=0.225\textwidth]{pattern_450um.jpg}& \\
-	\end{tabular*}
-	
-	\vspace{1em}
-	
-	\begin{tikzpicture}
-	\begin{axis}[%
-		width=0.95\textwidth,
-		height=0.4\textwidth,
-		xmin=0,xmax=1,xlabel={gap (\si{\milli\metre})},
-		xtick={0.1,0.3,...,0.9},
-		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
-		xlabel near ticks,
-		ylabel near ticks,
-		%legend style={legend pos=north west,}
-		]
-		\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
-		\addplot+[domain=0:3, no marks, Accent1, forget plot] {4.23*x};
-	\end{axis}
-	\end{tikzpicture}
-\end{textblock}
 
-\begin{textblock}{4}(5,16)
-	\Head{Creep and fractures}
-	Couette cell, no brush, the gel sticks, no pattern.\\
-	Wait \SI{8}{\hour} for equilibration, then apply constant stress.
-	
-	\begin{tikzpicture}
-	\begin{loglogaxis}[%
-		name=a,
-		xlabel={$t\,(s)$},
-		ylabel={Shear rate $(s^{-1})$},
-		]
-		\addplot+[no marks, Accent2] file {Y34_strain_rate_log.txt};
-		\draw[<->] (axis cs:1e-1,1) -- (axis cs:1.3e3,5e-4) node[midway,above,rotate=-21] {Andrade} node[pos=0.25,below=1em] {$t^{-0.86}$};
-		\node at (axis cs:1.3e3,1e-4) (det){};
-		\node at (axis cs:2.3e3,1e4) (touch){};
-	\end{loglogaxis}
-	\draw[<-, Accent1, ultra thick] (det) +(0,0.1em) -- ++(0,-4em) node[left] {Fractures appear} -- ++(1em,0);
-	\draw[<-, Accent1, ultra thick] (touch) +(0,-0.1em) -- ++(0,3em) node[left] {Fractures meet} -- ++(1em,0);
-	\end{tikzpicture}\hfill
-	\begin{tikzpicture}[inner sep=0]
-		\node[above right] at (0,1em) {\includegraphics[width=1.5\TPHorizModule, trim=0 6mm 2cm 1cm,clip=true]{Y210_SSC300_avant_div.jpg}};
-		\node[below right] (b){\includegraphics[width=1.5\TPHorizModule, trim=0 6mm 2cm 1cm,clip=true]{Y210_SSC300_premiere_frac.jpg}};
-		\node[below left=0 of b.north east]{\includegraphics[width=0.75\TPHorizModule]{detail_premiere_frac.jpg}};
-		\draw[Accent2,radius=0.07\TPHorizModule] ++(b.north east) +(-1.14\TPHorizModule,-1.05\TPHorizModule) circle;
-		\draw[Accent2,radius=0.09\TPHorizModule] ++(b.north east) +(-0.435\TPHorizModule,-0.375\TPHorizModule) circle;
-		\draw[ultra thick] (a.south west) ++(0,0.25em) -- ++(0.5\TPHorizModule,0) node[pos=0.5, above=0, font=\small] {\SI{2}{\centi\metre}};
-		\draw[ultra thick, Accent2, <->] (a.south west) ++(0.51\TPHorizModule, \TPHorizModule) -- ++(0.09\TPHorizModule,0) node[midway,above=0.25em,font=\small]{$\lambda$};
-	\end{tikzpicture}
-	
-	\begin{tabular}{b{0.55\textwidth}b{0.45\textwidth}}
-	\begin{tikzpicture}
-	\begin{loglogaxis}[%
-		ylabel={Breaking time (s)},ylabel near ticks,
-		xlabel={Stress $\sigma$ (Pa)},
-		xmin=10,
-		legend style={font=\small\sc}, legend pos=south west,
-		]
-		\addplot+[only marks, Accent1, mark options={fill=Accent1}] coordinates {(40, 67225) (50,29860) (100,398) (200,4) (300,0.06)};
-		\addplot+[only marks, Accent2, mark options={fill=Accent2}] table[x index=0, y index=1]{cas4_GDL1_t_cassure_sigma.txt};
-		\legend{gdl 4\%, gdl 1\%};
-		\addplot+[Accent1, no marks, forget plot, domain=40:300] gnuplot {9.2e+15*x^{-6.8}};
-		\addplot+[Accent2, no marks, forget plot, domain=150:1000] gnuplot {3.93e+17*x^{-5.44}};
-	\end{loglogaxis}
-	\end{tikzpicture}&
-	Irreversible fractures\linebreak
-	\Subhead{Fracture\linebreak wavelength}
-	\begin{itemize}
-		\item stress-independent
-		\item composition-indep.
-		\item $\propto$ gap
-	\end{itemize}\\
-	\end{tabular}
-	
-	\begin{tikzpicture}
-	\begin{axis}[%
-		width=0.95\textwidth,
-		height=0.4\textwidth,
-		xmin=0,xmax=3.5,xlabel={gap (\si{\milli\metre})},
-		xtick={0, 0.5,...,3},
-		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
-		xlabel near ticks,
-		ylabel near ticks,
-		legend cell align=left,
-		legend style={font=\small}, legend pos=north west,
-		]
-		\addplot+[%
-			only marks, Accent1, mark options={fill=Accent1},
-			error bars/.cd,
-			y dir=both,y explicit,
-			x dir=none,x fixed=0.05,
-			]
-			coordinates {
-				(0.5,0.6) +-(0,0.12)
-				(1, 1.33) +-(0,0.14)
-				(1.5,1.5) +-(0,0.14)
-				(1.5, 1.25) +- (0,0.77)
-				(3,3.75) +- (0,0.4)
-				(3, 4.2) +-(0,0.4)};
-		\addplot+[%
-			only marks, Main, mark options={fill=Main},
-			error bars/.cd,
-			y dir=both,y explicit,
-			x dir=none,x fixed=0.05,
-			]
-			coordinates
-			{(2.5,3.2) +- (0,0.84)};
-		\addplot+[%
-			only marks, Accent2, mark options={fill=Accent2}, mark=triangle,
-			error bars/.cd,
-			y dir=both,y explicit,
-			x dir=none,x fixed=0.05,
-			]
-			coordinates
-			{(2,2.29) +- (0,0.13)};
-		\legend{$R_\text{out}=\SI{25}{\milli\metre}$, $R_\text{out}=\SI{37.5}{\milli\metre}$, $R_\text{out}=\SI{40}{\milli\metre}$};
-		\addplot+[domain=0:3.5, no marks, Accent1, forget plot] {1.25*x};
-	\end{axis}
-	\end{tikzpicture}
-\end{textblock}
-
-\begin{textblock}{5}(10,16)
-	\Head{Ultrasound speckles}
-	\Subhead{Probe deformation inside the gap}
-	
-	\begin{tikzpicture}[ultra thick, font=\small]
-	\node[above right, inner sep=0] (sch) {\includegraphics[width=0.4\textwidth]{usv_3D_image}};
-	\draw[<-] (0.3\textwidth,0.11\textwidth) -- +(1em,0) node[right] {water in};
-	\draw[->] (0.3\textwidth,0.07\textwidth) -- +(1em,0) node[right] {water out};
-	\node[right] at (0.2\textwidth, 0.3\textwidth) (rh) {rheometer};
-	\node[above right] at (0.2\textwidth, 0) (arraylabel) {array of transducers};
-	\draw[->,dotted]	 (arraylabel.west) -- (0.1\textwidth, 0.1\textwidth);
-	\draw[->] (0.06\textwidth, 0.15\textwidth) -- (0,0.15\textwidth) node[draw, left, text width=0.18\textwidth] (mce) {multi-channel electronics};
-	\node[above=of mce, draw] (pc) {PC};
-	\draw[->] (mce)-- (pc);
-	\draw[->] (rh) -- +(0,1em) -| (pc.north);
-	\node[above right=0 and 0.1\textwidth of sch.south east, text width=0.25\textwidth, align=right] {Gallot et al. \linebreak\textit{Rev. Sci. Instrum.} 84, 045107 (2013).};
-	\node[below right =of sch.north east, text width=0.32\textwidth] {3\% of \SI{30}{\micro\metre} acrylamide beads as contrast agent};
-	\end{tikzpicture}
-	
-	\begin{tikzpicture}
-	\begin{groupplot}[%
-		group style={
-			group name=grp,
-			group size=2 by 1, 
-			horizontal sep=\TPHorizModule,
-		},
-		width=2\TPHorizModule,
-		xmin=0,xmax=200,
-		xlabel={t},
-		axis on top,
-		xtick={28, 100, 172},
-		xticklabels={49h30, 50h, 50h30},
-		]
-		\nextgroupplot[ymin=0, ymax=32,	ylabel={$z (\si{\milli\metre})$}, title={$r=\SI{200}{\micro\metre}$}]
-		\addplot graphics[
-			xmin=0,xmax=200,
-			ymin=0,ymax=32,
-			]{Y137_speckleBF_tz.png};
-		\addplot[no marks,Accent2, domain=0:32]  ({187-0.272*(x-17.6)^2}, x);
-		\draw[Accent1] (axis cs:187,0)--(axis cs:187,32);
-		
-		\nextgroupplot[ymin=0, ymax=2,	ylabel={$r (\si{\milli\metre})$}, title={$z=\SI{8}{\milli\metre}$}]
-		\addplot graphics[
-			xmin=0,xmax=200,
-			ymin=0,ymax=2,
-			]{Y137_speckleBF_tr.png};
-			\draw[Accent2] (axis cs:172,0)--(axis cs:172,2) node[pos=0.66, left, font=\small, fill=gray, inner sep=1pt] {free from the rotor};
-			\draw[Accent1] (axis cs:187,0)--(axis cs:187,2) node[pos=0.33, left, font=\small, fill=gray, inner sep=1pt] {global yield};
-	\end{groupplot}
-	\node[left=of grp c2r1.south west] {rotor};
-	\node[left=of grp c2r1.north west] {stator};
-	\end{tikzpicture}
-	
-	Fractures appear when the gel detaches from the rotor. Creates a free surface that allows synæresis, relaxation of the gelation-induced \linebreak stress and possibly wrinkling.
-\end{textblock}
-
-\begin{textblock}{5}(10,22.5)
-	\Head{Funding}
-	\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}lb{0.6\textwidth}}
-	\includegraphics[width=0.3\textwidth]{NEW-Logo-ERC-OUTLINE}&
-	The research leading to these results has received funding from the European Research Council under the European Union's Seventh \linebreak Framework Programme (FP7/2007-2013) /\linebreak ERC grant agreement n°~258803.\\
-	\end{tabular*}
+\begin{textblock}{15}(0,25)
+\small{\texttt{The research leading to these results has received funding from the European Research Council under the European Union's Seventh Framework Programme (FP7/2007-2013) / ERC grant agreement n°~258803.}}
 \end{textblock}
 
 
