XZ slices of blisters. Good volumic image of forming blister Volume and area of blisters Blister sketch , remarks and equations

--- a/2014_05_15_discussion.tex
+++ b/2014_05_15_discussion.tex
@@ -41,9 +41,9 @@ au dessus de laquelle $\sigma$ est capable d'écraser la cloque.
 
 Dans notre cas $\Delta\rho\simeq 10\%w = \SI{100}{\kilo\gram\per\metre^3}$, d'où
 \begin{equation}
-\lambda^* \sim \left(\frac{\num{6e-12}}{100\times 10 \num{50e-6}}\right)^\frac{1}{3} \sim \SI{5}{\centi\metre}
+\lambda^* \sim \left(\frac{\num{6e-12}}{100\times 10 \times \num{50e-6}}\right)^\frac{1}{3} \sim \SI{0.4}{\milli\metre}
 \end{equation}
-Donc la gravité n'influe pas, ce qui est confirmé par un échantillon vertical plissant.
+Donc la gravité pourrait influer, ce qui est infirmé par un échantillon vertical plissant.
 
 \paragraph*{Si $\sigma$ est une pression de Darcy $P$} telle que 
 \begin{equation}
@@ -62,13 +62,13 @@ On a mesuré $v\simeq \SI{0.2}{\micro\metre\per\second}$, et $\ell_p=\SI{4}{\mic
 
 D'après Kolinski PRL 2009, aux faibles déformations la longueur d'onde effective est $\lambda \sim \epsilon^{1/7} \lambda^*$ avec $\epsilon$ le gain relatif de longueur du film. L'amplitude, elle, s'écrit $A \sim \epsilon^{4/7} \lambda^*$. On remarque que la base de la cloque n'évolue plus après que son sommet ait touché le plafond, c'est à dire que la longueur d'onde est sélectionnée quand $A=e-h\equiv H$.
 
-Ca nous donne $\lambda \sim \epsilon^{-3/4} H$. On retrouve ainsi la proportionalité entre la longueur d'onde et l'épaisseur de la cellule.
+Ca nous donne $\lambda \sim \epsilon^{-3/7} H$. On retrouve ainsi la proportionalité entre la longueur d'onde et l'épaisseur de la cellule.
 \begin{equation}
-\epsilon \sim \left(\frac{\lambda}{e}\frac{e}{H}\right)^{-4/3} \simeq \left(15\times 2\right)^{-4/3} \simeq 1\%
+\epsilon \sim \left(\frac{\lambda}{e}\frac{e}{H}\right)^{-4/3} \simeq \left(15\times 2\right)^{-7/3} \simeq \num{3e-4}
 \end{equation}
-Ce qui correspond tout à fait aux mesures expérimentales de la racine carrée de l'excès d'aire au moment où les cloques se forment.
+Ce qui correspond tout à fait aux mesures expérimentales de l'excès d'aire au moment où les cloques se forment.
 
-On avait remarqué que lorsque des cloques se forment, la longueur d'onde est environ moitié plus petite que lorsque des plis se forment de façon homogène. Si les plis se forment bien à $\lambda^*$ (voir plus bas), les cloques ont une taille de $\epsilon^{1/7} \lambda^*$, or avec la valeur ci-dessus, on trouve $\epsilon^{1/7}\simeq 0.5$.
+On avait remarqué que lorsque des cloques se forment, la longueur d'onde est environ moitié plus petite que lorsque des plis se forment de façon homogène. Si les plis se forment bien à $\lambda^*$ (voir plus bas), les cloques ont une taille de $\epsilon^{1/7} \lambda^*$, or avec la valeur ci-dessus, on trouve $\epsilon^{1/7}\simeq 0.3$.
 
 \pagebreak
 
