--- a/poster_Okinawa.tex
+++ b/poster_Okinawa.tex
@@ -160,7 +160,7 @@ Wrinkling of a confined porous layer
 		width=\textwidth-4em,
 		height=0.3\textwidth,
 		extra tick style={grid=major},%
-		ylabel absolute, every axis y label/.append style={anchor=base, yshift=1.5em}
+		ylabel absolute, every axis y label/.append style={anchor=base, yshift=1.25em}
 		]
 	\nextgroupplot[
 		ymin=0, ymax=7, ylabel={\textcolor{Accent1}{pH}},
@@ -220,10 +220,101 @@ For confocal microscopy we label 10\% of the casein.
 \end{textblock}
 
 \begin{textblock}{15}(0,8)
-	\Head{Initial contact with a substrate: Poroelastic blistering}
+	\Head{Initial flat contact with a substrate: Poroelastic blistering}
 	
 \end{textblock}
 
+\begin{textblock}{3}(0,8.5)
+	\begin{tikzpicture}
+	\matrix[matrix of nodes, matrix anchor=north east, inner sep=0, row sep=0.01\textwidth]  (m){
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t000.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t011.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t110.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t116.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t117.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t123.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t200.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t221.png}\\
+	};
+	\begin{scope}[above left, white, fill=gray]
+		\node at (m-1-1.south east) {\SI{15}{\minute}};
+		\node at (m-2-1.south east) {\SI{22}{\minute}};
+		\node at (m-3-1.south east) {\SI{1}{\hour}~26};
+		\node at (m-4-1.south east) {\SI{1}{\hour}~30};
+		\node at (m-5-1.south east) {\SI{1}{\hour}~31};
+		\node at (m-6-1.south east) {\SI{1}{\hour}~35};
+		\node at (m-7-1.south east) {\SI{2}{\hour}~25};
+		\node at (m-8-1.south east) {\SI{2}{\hour}~40};
+	\end{scope}
+	\draw[<->, ultra thick] ($(m-8-1.south west)+(0,-0.25em)$) -- +(0.786\textwidth,0) node[midway, below] {\SI{1}{\milli\metre}};
+	\end{tikzpicture}
+	
+	\begin{tikzpicture}
+	\begin{groupplot}[%
+		group style={
+			group name=g, group size=1 by 2,
+			xticklabels at=edge bottom,
+			vertical sep=0,
+			},
+		xmin=0, xmax=170, xtick={0,30,...,150},
+		extra tick style={grid=major},%
+		extra x tick labels={},%
+		scale only axis,
+		width=\textwidth-4em,
+		height=0.3\textwidth,
+		ylabel absolute, every axis y label/.append style={anchor=base, yshift=1.25em}
+		]
+	
+	\nextgroupplot[ylabel={Volume (\%)}, ymin=20, ymax=100, ytick={40,60,80,100}, every axis y label/.append style={xshift=0.5em}]
+	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{1}*100}]{relative_volume_excess_area_cloques.txt};
+	%\addplot+[only marks,Accent2, mark=+] table[y expr={\thisrowno{1}*100}]{volume_rel_half_cas8_toi.txt};
+	
+	\nextgroupplot[ylabel={Excess area (\%)}, ymin=0, ymax=2, ytick={0,0.5,1,1.5}, xlabel={time (min)}, every axis y label/.append style={xshift=-1em}]
+	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{2}*100}]{relative_volume_excess_area_cloques.txt};
+	%\addplot+[only marks,Accent2, mark=+] table{excess_area_pc_half_cas8_toi.txt};
+	\end{groupplot}
+	\end{tikzpicture}
+	
+\end{textblock}
+
+\begin{textblock}{3}(4,8.5)
+\includegraphics[width=\textwidth]{volume_cloque_t116.jpg}
+
+\begin{tikzpicture}[ultra thick]
+\begin{axis}[
+	name=a,
+	width=\textwidth, height=0.25\textwidth, scale only axis,
+	domain=-180:180, no markers, ymin=0, ymax=4,xmin=-180,xmax=180,
+	axis lines=none, xtick=\empty,
+	]
+	\addplot+[Accent1]{cos(x)+1};
+	\addplot+[Accent1]{cos(x)+1.5};
+	\draw[->, ultra thick] (axis cs:90,1.25) -- +(45:0.05\textwidth) node[pos=1, above] {$\vec{v}$};
+	\node[above] at (axis cs:-90,1.5) {$P_2$};
+	\node[below right] at (axis cs:-90,1.25) {$P_1$};
+\end{axis}
+\fill[pattern=north east lines,pattern color=Accent2] (a.south west) rectangle (\textwidth,-1em);
+\draw[<->] ($(a.south west)+(0,-1.1em)$) -- +(\textwidth,0) node[midway, below] {$\lambda$};
+\end{tikzpicture}
+
+\begin{itemize}
+\item Synæresis then swelling
+\item First blister after $\approx\SI{1}{\hour}$ of swelling
+\item Independent blisters
+\item $\lambda \ll L \Rightarrow$ not buckling
+\item Once in contact with ceiling, $\lambda$ fixed
+\item Cascade buckling\linebreak \hfill\textit{Roman \& Pocheau 1999}
+\end{itemize}
+\end{textblock}
+
+\begin{textblock}{3}(8,8.5)
+Bending energy $B$ vs vertical stress $\sigma$:
+\[ \lambda^* = \left(\frac{B}{\sigma}\right)^{1/3}\text{, eg. }\sigma =\rho g h \]
+\textit{Kolinski et al 2009, Vella et al 2009}
+
+Here $\sigma$ is a Darcy pressure due to solvent flow through the gel (pore size $\ell_p$)
+\[\sigma = \Delta P \sim \eta h v/\ell_p^2   \]
+\end{textblock}
 
 
 \begin{textblock}{15}(0,14)
